Closed Bug 1539348 Opened 6 years ago Closed 6 years ago

Set As DesktopBackground not working on newer Firefox versions

Categories

(Core :: Widget: Win32, defect, P3)

Desktop
Windows 7
defect

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- wontfix
firefox67 --- verified
firefox68 --- verified

People

(Reporter: semenko99, Assigned: m_kato)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [triagemonth-2019-03] )

Attachments

(1 file)

The 'Set As Desktop Background' doe not seem to work on Firefox 66.0.0 and 66.0.1
Works on 65.0.2

-Put cursor on picture - > Right click mouse - > select 'Set As Desktop Background'
When tried this on Firefox 66.0.0 and 66.0.1, the image does not save on desktop.

Hi Noah Body,

-Put cursor on picture - > Right click mouse - > select 'Set As Desktop Background'
When tried this on Firefox 66.0.0 and 66.0.1, the image does not save on desktop.

'Set As Desktop Background' feature does not save the picture on desktop. It changes desktop background. If you are trying to save the image, you can use 'Save image as..' feature instead.

As for the 'Set as Desktop Background' feature, it is changing the desktop background without any issue on Firefox 66.0.1 on Windows 10(64-bit) in my machine. If this is not working for you, could you please check in Safe mode (https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode), so that we can be sure that Add-ons are not causing this issue ?

Flags: needinfo?(semenko99)
Whiteboard: [triagemonth-2019-03]

Sorry, forgot to mention that I am using Windows 7.

Tried running Firefox in Safemode ( ie with Add-Ons disabled) and when I tried the Set as Desktop Background, the same problem happens ( ie image is not saved to desktop).

Thanks !

Flags: needinfo?(semenko99)

I managed to reproduce this issue on Windows 7 (64-bit) machine. The 'Set As Desktop Background' is not changing the desktop background.

So, I am marking this issue as New!

Status: UNCONFIRMED → NEW
Has STR: --- → no
Ever confirmed: true
Has STR: no → yes

Thanks !

I can only reproduce this on Windows 7. I still get the "save image as desktop background" dialog, but upon accepting the settings of that dialog, nothing happens to the desktop background. No errors in the browser console either.

OS: Unspecified → Windows 7
Priority: -- → P3
Hardware: Unspecified → Desktop

Verified this report on all the latest Firefox versions and across OS-es. (Windows 7, Windows 10, Mac OS 10.14 and Ubuntu 18.04).
I managed to reproduce it only on Windows 7 as well.

Running Mozregression tool indicates that the regression might have been introduced by bug 1502772 from pushlog https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=fb7d7585d30b2d2af54907f7110c82bac6d52642&tochange=8e2a1751a0f5ec864d50f335555d08216b6c648e.

Has Regression Range: --- → yes
Component: General → Widget: Win32
Flags: needinfo?(m_kato)
Product: Firefox → Core
Regressed by: 1502772

OK, Windows 7 doesn't support v4 header for wallpaper?

Assignee: nobody → m_kato
Flags: needinfo?(m_kato)

This is regression by bug 1502772. Windows 7 doesn't support bitmap v4 format
for wallpaper. So I revert writing bitmap code to https://hg.mozilla.org/integration/mozilla-inbound/rev/4caf1f44450a for wallpaper.

Attachment #9058190 - Attachment description: Bug 1539348 - Write old bitmap format for wallpapar support of Windows 7. → Bug 1539348 - Write old bitmap format for wallpaper support of Windows 7.
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/41227706dc29 Write old bitmap format for wallpaper support of Windows 7. r=jmathies
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Makoto, do you think that this patch would be safe to uplift to beta? Thanks

Flags: needinfo?(m_kato)

Comment on attachment 9058190 [details]
Bug 1539348 - Write old bitmap format for wallpaper support of Windows 7.

Beta/Release Uplift Approval Request

  • User impact if declined: [Set As Desktop Background] on context menu doesn't work on Windows 7
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: 1. open web site (ex. https://www.mozilla.org/en-US/)
  1. right click image
  2. select [Set As Desktop Background] in context menu
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Back to old code. Also this is used by [Set As Desktop Background] only.
  • String changes made/needed:
Flags: needinfo?(m_kato)
Attachment #9058190 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Comment on attachment 9058190 [details]
Bug 1539348 - Write old bitmap format for wallpaper support of Windows 7.

Low risk patch for a recent regression, uplift approved for 67 beta 12, thanks.

Attachment #9058190 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified, that the issue is not reproducible on Nightly 68(20190417214729) on Windows 7 x32.
I'll verify it on 67 beta 12 also, when it will be available.

Verified, that the issue is not reproducible on Beta 67b12(20190418160535) on Windows 7 x64.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: