Bug 1539348 - Write old bitmap format for wallpaper support of Windows 7. r=jmathies a=pascalc

This is regression by bug 1502772. Windows 7 doesn't support bitmap v4 format
for wallpaper. So I revert to previous code to write wallpaper bitmap.

Differential Revision: https://phabricator.services.mozilla.com/D27465